# kaldi-fp16

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README (1).md  README.md  backtest  chaintest  chainverify  debug.txt  egstools  go.mod  out.txt  sgdtest  test_egs  traintest
cmd/backtest/: main.go
cmd/chainbench/: main.go
cmd/chaintest/: main.go
cmd/chainverify/: main.go
cmd/csrdump/: main.go
cmd/denverify/: main.go
cmd/dltest/: main.go
cmd/egstools/: main.go
cmd/fwdtest/: main.go
cmd/gputest/: main.go
cmd/loadtest/: main.go
cmd/nnettest/: main.go
cmd/nscheck/: main.go
cmd/sgdtest/: main.go
cmd/traintest/: main.go
cpp/: CMakeLists.txt
cpp/cuda/: backward_wrappers.cu  bridge.cu  chain.cu  chain_backward.cu  chain_den.cu  chain_det.cu  cnn_kernels.cu  kernels.cu  ops.cu
cpp/include/: bridge.h  chain.h  chain_backward_api.h  chain_den.h  cnn_fp16.h  ops.h  tensor_fp16.h
cpp/src/: cgo_interface.cu  tensor_fp16.cpp
docs/: CM_DECOMPRESSION_FIX.md  Readme_native_den.md  api-reference.md  kaldi-egs-format.html  kaldi-egs-format.md  kaldi-egs.html  kaldi_fp16_complete_report(2).md  kaldi_fp16_complete_report.html  migration-guide.md  performance-guide.md  tensor-cores.md
examples/: CMakeLists.txt  basic_matmul.cu  benchmark_fp16.cu  compare_precision.cu
go/egsreader/: reader.go  types.go
go/gotorch/: cnn_tdnn.go  layers.go  model.go  ops.go  tensor.go
go/kaldibridge/: bridge.go  cnn_bridge.go
include/kaldi-fp16/: matrix-fp16.h  tensor-ops.h
internal/batch/: batch.go  batch_test.go
internal/compare/: compare.go
internal/fp16/: fp16.go  fp16_test.go
internal/gpu/: backward_ops.go  bridge.go  ops.go  optimize.go  tensor.go
internal/kaldi/: kaldi.go  textparser.txt
internal/loader/: dataloader.go  dataloader_test.go  loader.go  loader_test.go
internal/nnet/: backward.go  backward_test.go  chain_loss.go  denominator.go  denominator_gpu.go  forward.go  layers.go  model.go  network_backward.go  train_step.go  weight_loader.go  weight_loader_test.go  xconfig.go
internal/parser/: fst.go  helpers_test.go  matrix.go  parser.go  parser_edge_test.go  sm_parse_test.go  types.go
internal/sparse/: sparse.go  sparse_test.go
scripts/: build_den.sh  build_gpu_test.sh  compare_totext.sh  create_snapshot.sh  train_cnn_tdnn.sh  verify_all_totext.sh  verify_full.sh
snapshot/: snapshot_20260129_164357.md  snapshot_20260129_164641.md  snapshot_20260209_091801.md
src/: matrix-fp16.cu  tensor-ops.cu
test_system/: chain_verify.cc  kaldi_den_wrapper.cc  kaldi_den_wrapper.h  test_den_wrapper.cc
tools/: build_dump_chain_ref.sh  dump_chain_ref  dump_chain_ref.cc
zapas/: chain_den_native.txt  chain_grad.txt  debug_invalid.txt  kaldi_den.txt  test_egs.txt  test_egs_debug.txt  test_egs_debug2.txt  test_egs_debug3.txt  test_egs_debug4  test_egs_debug4.txt  test_gpu.txt  test_structure.txt  test_structure2.go  test_weight_debug.txt
zapas/egsreader/: ark_reader.go  binary.go  reader_test.txt
